Periodic cleanup ()
- bump errorprone version
- simplify conditions in several places
- add missing overrides
- convert to records
- delete not used methods
- use correct map in AbstractStructRegistry
- cleanup duplicated dependency
- fix some javadocs